# jaxpi2

./: README.md  pyproject.toml  requirements.txt
examples/advection/: eval.ipynb  models.py  train.py
examples/advection/configs/: base.py  fixed_pseudo_time.py  plain.py  pseudo_time.py
examples/allen_cahn/: eval.ipynb  models.py  train.py
examples/allen_cahn/configs/: base.py  baseline.py  pseudo_time.py
examples/bfs_flow/: eval.ipynb  models.py  train.py  utils.py
examples/bfs_flow/configs/: base.py  baseline.py  fixed_pseudo_time.py  pseudo_time.py
examples/burgers/: eval.ipynb  models.py  train.py
examples/burgers/configs/: base.py  fixed_pseudo_time.py  pseudo_time.py
examples/ginzburg_landau/: eval.ipynb  models.py  train.py  utils.py
examples/ginzburg_landau/configs/: base.py
examples/gray_scott/: eval.ipynb  main.py  models.py  train.py  utils.py
examples/gray_scott/configs/: base.py  (+2 more)
examples/inviscid_burgers/: eval.ipynb  main.py  models.py  train.py  utils.py
examples/kdv/: eval.ipynb  models.py  train.py
examples/kolmogorov_flow/: eval.ipynb  models.py  train.py  utils.py
examples/ks/: eval.ipynb  models.py  train.py  utils.py
examples/lid_driven_cavity/: eval.ipynb  eval.py  models.py  train.py  utils.py
examples/rayleigh_taylor/: eval.ipynb  models.py  train.py  utils.py
examples/sod_shock_tube/: eval.ipynb  models.py  reference_solution.ipynb  train.py  utils.py
examples/wave/: eval.ipynb  models.py  train.py  utils.py
jaxpi/: __init__.py  archs.py  checkpointing.py  evaluator.py  models.py  samplers.py  utils.py
(+24 files in other folders)
